setup is not running on DerivedTest on github ci, manual fix